--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.511.0",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.1"
