--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "lucide-react": "^0.511.0",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
